--- a/MediaPlayer/MediaPlayer/MediaPlayer.csproj
+++ b/MediaPlayer/MediaPlayer/MediaPlayer.csproj
@@ -107,6 +107,9 @@
     <None Include="MediaPlayer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Ubuntu17.10.png" />
+    <Content Include="Assets\背景12.jpg" />
+    <Content Include="Assets\背景13.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
